--- a/wagtail/wagtailimages/templates/wagtailimages/multiple/add.html
+++ b/wagtail/wagtailimages/templates/wagtailimages/multiple/add.html
@@ -84,6 +84,7 @@
     <script src="{% static 'wagtailimages/js/vendor/jquery.fileupload-image.js' %}"></script>
     <script src="{% static 'wagtailimages/js/vendor/jquery.fileupload-validate.js' %}"></script>
     <script src="{% static 'wagtailadmin/js/vendor/tag-it.js' %}"></script>
+    {% include "wagtailadmin/pages/_editor_js.html" %}
 
     <!-- Main script -->
     <script src="{% static 'wagtailimages/js/add-multiple.js' %}"></script>
